[project]
name = "signals-of-ai"
version = "0.1.0"
description = "Live competitive-intelligence demo powered by Nebius Token Factory, Tavily, and LangChain DeepAgents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain>=0.3",
    "langchain-nebius>=0.1.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "uvicorn[standard]>=0.49.0",
]
